# mode-python-sdk

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: quality.yml  tests.yml
src/mode_sdk/: client.py  exceptions.py  models.py  resources.py
tests/: test_client.py  test_models.py
