[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mode-sdk"
version = "0.1.0"
description = "A Python SDK for the Mode API."
authors = [{ name = "Daniil Merkulov", email = "daniil.merkulov@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["requests>=2.20.0", "pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "requests-mock", "uv"]
